--- a/src/app/features/summary/summary.component.css
+++ b/src/app/features/summary/summary.component.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  max-width: 800px;
+  max-width: 1050px;
   margin: 0 auto;
   padding: 20px;
   background-color: #f9f9f9;
@@ -18,4 +18,13 @@
   text-align: center;
   color: #333;
   margin-bottom: 20px;
+}
+
+.status-approved {
+  color: green;
+  font-weight: bold;
+}
+.status-pending {
+  color: orange;
+  font-weight: bold;
 }
