--- a/src/app/features/summary/summary.component.html
+++ b/src/app/features/summary/summary.component.html
@@ -95,6 +95,8 @@
           Score
           <p-sortIcon field="assessmentScore"></p-sortIcon>
         </th>
+        <th>status</th>
+        <th>Action</th>
       </tr>
     </ng-template>
 
@@ -105,6 +107,29 @@
         <td>{{ user.position }}</td>
         <td style="text-align: center">{{ user.division.division_name }}</td>
         <td style="text-align: center">{{ user.assessmentScore }}</td>
+        <td style="text-align: center">
+          <span
+            [ngClass]="{
+              'status-approved': user.assessmentStatus === 1,
+              'status-pending': user.assessmentStatus === 0
+            }"
+          >
+            {{ getStatusLabel(user.assessmentStatus) }}
+          </span>
+        </td>
+        <td style="text-align: center">
+          <button
+            pButton
+            label="Approve"
+            icon="pi pi-check"
+            (click)="approveAssessmentSummary(user.assessmentSummaryId)"
+            [disabled]="
+              !user.assessmentScore ||
+              isApproving[user.assessmentSummaryId] ||
+              user.assessmentStatus === 1
+            "
+          ></button>
+        </td>
       </tr>
     </ng-template>
   </p-table>
