--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -75,7 +75,7 @@
     <button
       pButton
       type="button"
-      label="Submit"
+      label="Save"
       icon="pi pi-save"
       (click)="saveSkills()"
       [disabled]="getUnfilledScoresCount() > 0 || isDisabled"
