--- a/src/app/features/summary/summary.component.html
+++ b/src/app/features/summary/summary.component.html
@@ -51,40 +51,36 @@
         <th style="width: 20%; text-align: center">Email</th>
         <th style="width: 20%; text-align: center">Position</th>
         <th style="width: 20%; text-align: center">
-          Division
-          <p-columnFilter
-            field="user.division.division_name"
-            matchMode="in"
-            display="menu"
-            [showMatchModes]="false"
-            [showOperator]="false"
-            [showAddButton]="false"
-            [showMatchModes]="false"
-            [showApplyButton]="false"
-            [showClearButton]="false"
-          >
-            <ng-template pTemplate="header">
-              <div class="px-3 pt-3 pb-0">
-                <span class="font-bold">Division Filter</span>
-              </div>
-            </ng-template>
-            <ng-template pTemplate="filter" let-filter="filterCallback">
-              <p-multiSelect
-                [options]="divisionOptions"
-                [(ngModel)]="selectedDivision"
-                placeholder="Any"
-                optionLabel="label"
-                optionValue="value"
-                (onChange)="filterDivision($event.value)"
-              >
-                <!-- <ng-template let-option pTemplate="item">
-                  <div class="inline-block vertical-align-middle">
-                    <span class="ml-1 mt-1">{{ option.label }}</span>
-                  </div>
-                </ng-template> -->
-              </p-multiSelect>
-            </ng-template>
-          </p-columnFilter>
+          Division 
+          @if(roles.includes('HR')){
+            <p-columnFilter
+              field="user.division.division_name"
+              matchMode="in"
+              display="menu"
+              [showMatchModes]="false"
+              [showOperator]="false"
+              [showAddButton]="false"
+              [showMatchModes]="false"
+              [showApplyButton]="false"
+              [showClearButton]="false"
+            >
+              <ng-template pTemplate="header">
+                <div class="px-3 pt-3 pb-0">
+                  <span class="font-bold">Division Filter</span>
+                </div>
+              </ng-template>
+              <ng-template pTemplate="filter" let-filter="filterCallback">
+                <p-multiSelect
+                  [options]="divisionOptions"
+                  [(ngModel)]="selectedDivision"
+                  placeholder="Any"
+                  optionLabel="label"
+                  optionValue="value"
+                  (onChange)="filterDivision($event.value)"
+                ></p-multiSelect>
+              </ng-template>
+            </p-columnFilter>
+          }
         </th>
         <th pSortableColumn="score" style="width: 15%; text-align: center">
           Score
@@ -100,7 +96,9 @@
         <td>{{ user.user.full_name }}</td>
         <td>{{ user.user.email_address }}</td>
         <td>{{ user.user.position }}</td>
-        <td style="text-align: center">{{ user.user.division.division_name }}</td>
+        <td style="text-align: center">
+          {{ user.user.division.division_name }}
+        </td>
         <td style="text-align: center">{{ user.score }}</td>
         <td style="text-align: center">
           <span
@@ -120,9 +118,7 @@
               class="p-button-sm p-button-info"
               (click)="approveAssessmentSummary(user.id)"
               [disabled]="
-                !user.score ||
-                isApproving[user.id] ||
-                user.status === 1
+                !user.score || isApproving[user.id] || user.status === 1
               "
             ></button>
             <button
@@ -131,9 +127,7 @@
               class="p-button-sm p-button-danger"
               (click)="unapproveAssessmentSummary(user.id)"
               [disabled]="
-                !user.score ||
-                isApproving[user.id] ||
-                user.status === 0
+                !user.score || isApproving[user.id] || user.status === 0
               "
             ></button>
           </div>
@@ -159,6 +153,4 @@
     ></app-user-summary>
     }
   </p-dialog>
-
-  
 </div>
