--- a/src/app/features/user-summary/user-summary.component.html
+++ b/src/app/features/user-summary/user-summary.component.html
@@ -150,6 +150,7 @@
     modal="true"
     [closable]="true"
     [style]="{ width: '400px', height: '450px' }"
+    [draggable]="false"
   >
     <div class="p-fluid">
       <br />
@@ -205,6 +206,7 @@
     modal="true"
     [closable]="true"
     [style]="{ width: '400px', height: '450px' }"
+    [draggable]="false"
   >
     <div class="p-fluid">
       <br />
